--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "main": "dist",
   "license": "MIT",
   "scripts": {
-    "build-babel": "babel -d ./build ./src -s",
-    "build": "mkdir build && npm run build-babel && node ./build/index.js",
-    "start": "nodemon -w src --exec \"babel-node src\""
+    "build": "webpack -w",
+    "start": "nodemon ./build/index.js"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "bcrypt": "3.0.2",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
@@ -18,12 +18,25 @@
     "express-validator": "^5.3.0",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.5",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "redux-immutable-helper": "^1.0.4"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.5",
+    "@types/express": "^4.17.0",
+    "@types/jsonwebtoken": "^8.3.2",
+    "@types/mongoose": "^5.5.6",
+    "@types/morgan": "^1.7.35",
+    "@types/node": "^12.0.10",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
-    "nodemon": "^1.18.3"
+    "nodemon": "^1.18.3",
+    "ts-loader": "^6.0.4",
+    "typescript": "^3.5.2",
+    "webpack": "^4.35.0",
+    "webpack-cli": "^3.3.5",
+    "webpack-node-externals": "^1.7.2"
   }
 }
