--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
   "name": "node-restful-starter",
   "version": "1.0.0",
-  "main": "dist",
+  "main": "build",
   "license": "MIT",
   "scripts": {
     "build": "webpack -w",
-    "start": "nodemon ./build/index.js"
+    "start": "nodemon ./build/index.js",
+    "release": "node_modules/.bin/webpack --mode production --config ./webpack.config.js"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
-    "bcrypt": "3.0.2",
+    "bcrypt": "^3.0.6",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
-    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-validator": "^5.3.0",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.5",
     "morgan": "^1.9.0",
+    "node": "^12.5.0",
     "redux-immutable-helper": "^1.0.4"
   },
   "devDependencies": {
@@ -35,7 +36,7 @@
     "nodemon": "^1.18.3",
     "ts-loader": "^6.0.4",
     "typescript": "^3.5.2",
-    "webpack": "^4.35.0",
+    "webpack": "4.35.2",
     "webpack-cli": "^3.3.5",
     "webpack-node-externals": "^1.7.2"
   }
