Work on Deploy to Heroku

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "build": "webpack -w",
-    "start": "nodemon ./build/index.js",
+    "start": "node ./build/index.js",
     "release": "node_modules/.bin/webpack --mode production --config ./webpack.config.js"
   },
   "dependencies": {
@@ -39,5 +39,8 @@
     "webpack": "4.35.2",
     "webpack-cli": "^3.3.5",
     "webpack-node-externals": "^1.7.2"
+  },
+  "engines": {
+    "node": "10.15.2"
   }
 }
