--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-restful-starter",
   "version": "1.0.0",
-  "main": "build",
+  "main": "build/index.js",
   "license": "MIT",
   "scripts": {
     "build": "webpack -w",
