--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-restful-starter",
+  "name": "todo-app-backend",
   "version": "1.0.0",
   "main": "build/index.js",
   "license": "MIT",
@@ -9,6 +9,7 @@
     "release": "node_modules/.bin/webpack --mode production --config ./webpack.config.js"
   },
   "dependencies": {
+    "babel-core": "^6.26.3",
     "babel-polyfill": "^6.26.0",
     "bcrypt": "^3.0.6",
     "bcryptjs": "^2.4.3",
@@ -20,7 +21,8 @@
     "mongoose": "^5.2.5",
     "morgan": "^1.9.0",
     "node": "^12.5.0",
-    "redux-immutable-helper": "^1.0.4"
+    "redux-immutable-helper": "^1.0.4",
+    "source-map-loader": "^0.2.4"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -30,8 +32,6 @@
     "@types/mongoose": "^5.5.6",
     "@types/morgan": "^1.7.35",
     "@types/node": "^12.0.10",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "nodemon": "^1.18.3",
     "ts-loader": "^6.0.4",
