--- a/package.json
+++ b/package.json
@@ -5,7 +5,14 @@
   "repository": "https://github.com/yamankatby/todo-app-backend.git",
   "author": "Yaman KATBY <m.yaman.katby@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "build": "tsc -w",
+    "start": "nodemon --inspect ./build/index.js"
+  },
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.1"
   }
 }
