--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
   "name": "todo-app-backend",
-  "version": "1.0.0",
-  "main": "src/index.js",
-  "repository": "https://github.com/yamankatby/todo-app-backend.git",
-  "author": "Yaman KATBY <m.yaman.katby@gmail.com>",
-  "license": "MIT",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "build": "tsc -w",
-    "start": "nodemon --inspect ./build/index.js"
+    "start": "node ./bin/www"
   },
   "dependencies": {
-    "express": "^4.17.1"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.1"
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "morgan": "~1.9.1",
+    "pug": "2.0.0-beta11"
   }
 }
