--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
     "start": "if [[ $NODE_ENV == 'production' ]]; then node ./bin/www; else nodemon ./bin/www; fi;"
   },
   "dependencies": {
+    "@hapi/joi": "15.0.3",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^8.1.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "mongoose": "^5.7.3",
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11"
   },
