🏷 Migrate to TypeScript

--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.1",
     "@types/hapi__joi": "^15.0.4",
+    "@types/http-errors": "^1.6.2",
     "@types/jsonwebtoken": "^8.3.4",
     "@types/mongoose": "^5.5.18",
+    "@types/morgan": "^1.7.37",
     "nodemon": "^1.19.3"
   }
 }
