--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.3",
     "morgan": "~1.9.1",
+    "morphism": "^1.12.1",
     "pug": "2.0.0-beta11"
   },
   "devDependencies": {
