--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "mongoose": "^5.7.3",
     "morgan": "~1.9.1",
     "morphism": "^1.12.1",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "redux-immutable-helper": "^1.0.4"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
